Functional reporter and REST API
- A functional in-memory map based reporter for storage.
- Implemented REST API for report endpoints.
